Added Spider Paleontologists
- Added Spider Paleontologists
- Changed Spider Geologists
- Nerfed Griffin Machinists

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -434,7 +434,6 @@
     "effectsMgr.statics.globalResourceRatio.title": "Max resources bonus",
     "effectsMgr.statics.goldCostReduction.title": "Reduction in gold cost",
     "effectsMgr.statics.goldMaxRatio.title": "Maximum gold bonus",
-    "effectsMgr.statics.goldSuperRatio.title": "Gold bonus",
     "effectsMgr.statics.happiness.title": "Happiness",
     "effectsMgr.statics.hapinnessConsumptionRatio.title": "Happines consumption",
     "effectsMgr.statics.happinessKittenProductionRatio.title" : "Kitten production from happiness",
@@ -475,19 +474,17 @@
     "effectsMgr.statics.manuscriptTradeChanceIncrease.title": "Manuscript trade chance bonus",
     "effectsMgr.statics.maxKittens.title": "Kittens",
     "effectsMgr.statics.maxKittensRatio.title": "Max kittens ratio",
-    "effectsMgr.statics.mineralsSuperRatio.title": "Minerals bonus",
+    "effectsMgr.statics.mintIvoryRatio.title": "Mint ivory ratio",
     "effectsMgr.statics.moonBaseStorageBonus.title": "Moon Base capacity bonus",
     "effectsMgr.statics.moonOutpost-unobtainiumPerTickSpace.title": "Lunar Outpost - Unobtainium conversion",
     "effectsMgr.statics.mysticismBonus.title" : "Mysticism Bonus",
     "effectsMgr.statics.nagaBlueprintTradeChance.title": "Naga blueprint trade chance",
     "effectsMgr.statics.necrocornPerDay.pact.title": "Necrocorn consumption",
-    "effectsMgr.statics.negativeCycleRatioPolicy.title": "Cycle negative effect reduction",
     "effectsMgr.statics.nextHashLevelAt.title": "Next hashrate level at",
     "effectsMgr.statics.nonZebraRelationModifier.title" : "Non-zebra relations modifier",
     "effectsMgr.statics.observatoryRatio.title": "Observatory science bonus",
     "effectsMgr.statics.onAHillCultureCap.title" :"Culture cap bonus",
     "effectsMgr.statics.oilReductionRatio.title": "Oil consumption reduction",
-    "effectsMgr.statics.oilSuperRatio.title": "Oil bonus",
     "effectsMgr.statics.oilWellRatio.title": "Oil bonus",
     "effectsMgr.statics.pactBlackLibraryBoost.title": "Black Library ratio",
     "effectsMgr.statics.pactDeficitRecoveryRatio.title": "Necrocorn deficit recovery per pyramid",
@@ -615,6 +612,7 @@
     "effectsMgr.statics.culturePolicyRatio.title": "Culture production bonus",
     "effectsMgr.statics.mineralsPolicyRatio.title": "Minerals production bonus",
     "effectsMgr.statics.mintRatio.title": "Mint ratio",
+    "effectsMgr.statics.oilPolicyRatio.title": "Oil production bonus",
     "effectsMgr.statics.woodPolicyRatio.title": "Wood production bonus",
     "effectsMgr.statics.goldPolicyRatio.title": "Gold production bonus",
     "effectsMgr.statics.springCatnipRatio.title": "Spring catnip bonus",
@@ -757,7 +755,7 @@
     "policy.dragonRelationsPhysicists.label" : "Dragon Relations: Physicists",
     "policy.dragonRelationsPhysicists.desc" : "Work together with dragon physicists to improve reactors.",
     "policy.dragonRelationsAstrologers.label" : "Dragon Relations: Astrologers",
-    "policy.dragonRelationsAstrologers.desc" : "Work together with Dragon astrologers to to study celestial objects. <br>You get bonus to starcharts that increases every year you are in a cycle.",
+    "policy.dragonRelationsAstrologers.desc" : "Work together with Dragon astrologers to study celestial objects. <br>You get bonus to starcharts that increases every year you are in a cycle.",
     "policy.terraformingInsight.label": "Space expansionism",
     "policy.terraformingInsight.desc" : "Terraforming efficiency is increased",
     "policy.communism.label" : "Communism",
@@ -841,9 +839,11 @@
     "policy.spaceBasedTerraforming.label" : "Space-based terraforming",
     "policy.spaceBasedTerraforming.desc" : "Put giant mirrors in the sky, boosting solar farms consistency. Unlocks Space Mirrors.",
     "policy.spiderRelationsGeologists.label" : "Spider Relations: Geologists",
-    "policy.spiderRelationsGeologists.desc" : "Work together with spider geologists to improve your mining and oil industry.",
+    "policy.spiderRelationsGeologists.desc" : "The spiders are willing to help us find and exploit good mineral deposits in exchange for our continued trading partnership.<br>The more we trade with spiders, the more it will benefit our mining industry",
     "policy.spiderRelationsChemists.label" : "Spider Relations: Chemists",
     "policy.spiderRelationsChemists.desc" : "Work together with spider chemists to study chemical processes. Spiders will now sell kerosene",
+    "policy.spiderRelationsPaleontologists.label" : "Spider Relations: Paleontologists",
+    "policy.spiderRelationsPaleontologists.desc" : "Paleontology is the study of ancient life through fossil records. The spider paleontologists can help us discover these fossils. They can also give us a better understanding of how and where oil was formed, improving our oil industry",
     "policy.stoicism.label" : "Stoicism",
     "policy.stoicism.desc" : "The stoics teach that we ought to endure hardship without complaint. Halve consumption of luxury resources, and breweries will consume less resources.",
     "policy.stripMining.label" : "Strip Mining",
@@ -1555,6 +1555,7 @@
     "stats.kittens.total": "Total Kittens",
     "stats.paragon.total": "Total Paragon",
     "stats.run.number": "Run Number",
+    "stats.spiderTrades.current": "Spider Trades Completed",
     "stats.time.current": "Time Played",
     "stats.trades.current": "Trades Completed",
     "stats.trades.total": "Trades Completed",
