Improved relation descriptions

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -753,9 +753,9 @@
     "policy.cryochamberExtraction.label": "Immortalism",
     "policy.cryochamberExtraction.desc" : "Extract cryochambers (?)",
     "policy.dragonRelationsPhysicists.label" : "Dragon Relations: Physicists",
-    "policy.dragonRelationsPhysicists.desc" : "Work together with dragon physicists to improve reactors.",
+    "policy.dragonRelationsPhysicists.desc" : "Dragon physicists are experts on nuclear energy. They can help us improve our reactors.",
     "policy.dragonRelationsAstrologers.label" : "Dragon Relations: Astrologers",
-    "policy.dragonRelationsAstrologers.desc" : "Work together with Dragon astrologers to study celestial objects. <br>You get bonus to starcharts that increases every year you are in a cycle.",
+    "policy.dragonRelationsAstrologers.desc" : "The dragons have a long standing tradition of studying celestial objects. We can work together with dragon astrologers to study the stars and get a look into their unique understanding of them.<br>Each year spent in a cycle increases starchart production",
     "policy.terraformingInsight.label": "Space expansionism",
     "policy.terraformingInsight.desc" : "Terraforming efficiency is increased",
     "policy.communism.label" : "Communism",
@@ -781,11 +781,11 @@
     "policy.fullIndustrialization.label" : "Full Industrialization",
     "policy.fullIndustrialization.desc" : "Take the advice of your new captains of industry, slightly improving the crafting bonus each factory provides.",
     "policy.griffinRelationsMetallurgists.label" : "Griffin Relations: Metallurgists",
-    "policy.griffinRelationsMetallurgists.desc" : "Work together with griffin metallurgists to improve steel plants.",
+    "policy.griffinRelationsMetallurgists.desc" : "Griffins have a very good understanding of steelmaking and its intricate processes. Their metallurgists can help us improve our steel plants.",
     "policy.griffinRelationsScouts.label" : "Griffin Relations: Scouts",
-    "policy.griffinRelationsScouts.desc" : "Work together with griffin scouts to improve hunting.",
+    "policy.griffinRelationsScouts.desc" : "Flight is very beneficial when looking for game. We can propose collaborating with griffin scouts during hunts to improve our effectiveness.",
     "policy.griffinRelationsMachinists.label" : "Griffin Relations: Machinists",
-    "policy.griffinRelationsMachinists.desc" : "Work together with griffin machinists to improve your machines.",
+    "policy.griffinRelationsMachinists.desc" : "Griffins understand aerodynamics well and their machinists can improve our steamworks effectiveness.",
     "policy.isolationism.label" : "Isolationism",
     "policy.isolationism.desc" : "Engage in protectionism of all types, making trades cheaper in terms of gold.",
     "policy.knowledgeSharing.label" : "Knowledge Sharing",
@@ -803,17 +803,17 @@
     "policy.nagaRelationsArchitects.label" : "Naga Relations: Architects",
     "policy.nagaRelationsArchitects.desc" : "Naga architects know some unique building techniques we do not possess, come to a trade agreement with them to obtain blueprints and study them.<br><br>Building embassies will increase the chance to get blueprints from Nagas. Once a sufficient number of embassies are built, they will improve the blueprint crafting ratio",
     "policy.nagaRelationsMasons.label" : "Naga Relations: Masons",
-    "policy.nagaRelationsMasons.desc" : "Work together with Naga masons to improve processing methods of stone.",
+    "policy.nagaRelationsMasons.desc" : "Nagas almost exclusively use minerals as building materials, so they have a lot of experience extracting and processing it. They can show us the secrets of efficiently crafting slabs using quarries.",
     "policy.nagaRelationsCultists.label" : "Naga Relations: Cultists",
-    "policy.nagaRelationsCultists.desc" : "Study naga rituals and employ them during religious services. Monuments will now be slightly affected by Order of the Sun upgrades.",
+    "policy.nagaRelationsCultists.desc" : "Nagas have very different religious traditions. We can study naga cultist rituals and employ them during our own religious services.<br>Monuments will now be slightly affected by Order of the Sun upgrades.",
     "policy.necrocracy.label" : "Necrocracy",
     "policy.necrocracy.desc" : "Your society offers itself to the elders, they will take over and bring dark times, but you will get a production bonus from BLS.",
     "policy.lizardRelationsDiplomats.label" : "Lizard Relations: Diplomats",
-    "policy.lizardRelationsDiplomats.desc" : "Work together with lizard diplomats to befriend the races of Cath. Building embassies will grant a culture production bonus.",
+    "policy.lizardRelationsDiplomats.desc" : "Lizards are a peaceful race. If we want to befriend the races of Cath, they are more than willing to contribute.",
     "policy.lizardRelationsEcologists.label" : "Lizard Relations: Ecologists",
-    "policy.lizardRelationsEcologists.desc" : "Work together with lizard ecologists to preserve Cath.<br>Low pollution levels will grant a bonus to some green energy sources.",
+    "policy.lizardRelationsEcologists.desc" : "The lizards love nature and want to protect it. Their ecologists are experts on preventing pollution and at low pollution levels they can tune some of our green energy buildings, increasing their effectiveness.",
     "policy.lizardRelationsPriests.label" : "Lizard Relations: Priests",
-    "policy.lizardRelationsPriests.desc" : "Work together with lizard priests to praise the sun together.",
+    "policy.lizardRelationsPriests.desc" : "The lizards share our love of the sun. Their priests would be happy to help The Order of the Sun.",
     "policy.openWoodlands.label" : "Open Woodlands",
     "policy.openWoodlands.desc" : "Allow some limited development of nearby lands, increasing wood and mineral production.",
     "policy.outerSpaceTreaty.label" : "Outer Space Treaty",
@@ -827,11 +827,11 @@
     "policy.republic.label" : "Republic",
     "policy.republic.desc" : "Best for large societies. Highly promoted leaders will provide a small bonus to the production of all kittens.",
     "policy.sharkRelationsBotanists.label" : "Shark Relations: Botanists",
-    "policy.sharkRelationsBotanists.desc" : "Work together with shark botanists to improve catnip refinement and conversion processes.",
+    "policy.sharkRelationsBotanists.desc" : "The sharks, like us, cultivate a lot of catnip so their botanists have a good understanding of it. We can collaborate with them to study and improve catnip refinement and conversion processes.",
     "policy.sharkRelationsScribes.label" : "Shark Relations: Scribes",
-    "policy.sharkRelationsScribes.desc" : "Work together with shark scribes to record Cath's history.",
+    "policy.sharkRelationsScribes.desc" : "The shark scribes are keen on recording Cath's history and we can help each other in the form of a trade deal. If we give them more resources in trade, they are willing to share more of their recordings with us.",
     "policy.sharkRelationsMerchants.label" : "Shark Relations: Merchants",
-    "policy.sharkRelationsMerchants.desc" : "Work together with shark merchants to discover and use the best trade routes through land and water. The more you trade, the more effective it becomes.",
+    "policy.sharkRelationsMerchants.desc" : "The sharks are experts of traveling through water, but not so much on land. We can work together with their merchants to discover and share trade routes through water and land.<br>The more we trade, the more effective it becomes",
     "policy.siphoning.label" : "Siphoning",
     "policy.siphoning.desc" : "Pacts consume alicorns and slow down corruption instead of consuming necrocorns. Lack of alicorns or corruption is compensated by consuming necrocorns.",
     "policy.socialism.label" : "Socialism",
@@ -841,7 +841,7 @@
     "policy.spiderRelationsGeologists.label" : "Spider Relations: Geologists",
     "policy.spiderRelationsGeologists.desc" : "The spiders are willing to help us find and exploit good mineral deposits in exchange for our continued trading partnership.<br>The more we trade with spiders, the more it will benefit our mining industry",
     "policy.spiderRelationsChemists.label" : "Spider Relations: Chemists",
-    "policy.spiderRelationsChemists.desc" : "Work together with spider chemists to study chemical processes. Spiders will now sell kerosene",
+    "policy.spiderRelationsChemists.desc" : "While spiders have abundant oil, they do not have the means to create kerosene yet. Our chemists can help them study chemical processes.<br><br> Spiders will now sell kerosene",
     "policy.spiderRelationsPaleontologists.label" : "Spider Relations: Paleontologists",
     "policy.spiderRelationsPaleontologists.desc" : "Paleontology is the study of ancient life through fossil records. The spider paleontologists can help us discover these fossils. They can also give us a better understanding of how and where oil was formed, improving our oil industry",
     "policy.stoicism.label" : "Stoicism",
