A few balancing changes & reflavor Persistence -> Agathism

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -732,6 +732,8 @@
     "policy.confirmation.title" : "Are you sure? You cannot tiptoe away from the grasp of your history.\nPolicy effects are permanent, and you cannot switch policies until you reset.",
 
     "policy.panel.label": "Policies",
+    "policy.agathism.label": "Agathism",
+    "policy.agathism.desc": "Accept the belief that the universe is headed towards a better future, even if there are some setbacks along the way.<br>Storage space for unicorn-related resources will be increased.",
     "policy.autocracy.label" : "Autocracy",
     "policy.autocracy.desc" : "Best for societies with highly promoted kittens. Makes the leader twice as good at their job. Leader increases conversion production based on uncapped housing buildings.",
     "policy.bigStickPolicy.label" : "Big Stick Policy",
@@ -771,7 +773,7 @@
     "policy.fullIndustrialization.label" : "Full Industrialization",
     "policy.fullIndustrialization.desc" : "Take the advice of your new captains of industry, slightly improving the crafting bonus each factory provides.",
     "policy.holyGround.label": "Holy Ground",
-    "policy.holyGround.desc": "Dedicate a place to honor the lost race's legacy. At this site, 5 additional ziggurats will be constructed, and unicorn sacrifices will yield 5% more tears.",
+    "policy.holyGround.desc": "Celebrate the legacy of the lost race and reserve a space in the city center for religious buildings only.<br>Unicorn sacrifices will be slightly more efficient.",
     "policy.isolationism.label" : "Isolationism",
     "policy.isolationism.desc" : "Engage in protectionism of all types, making trades cheaper in terms of gold.",
     "policy.knowledgeSharing.label" : "Knowledge Sharing",
@@ -792,9 +794,6 @@
     "policy.openWoodlands.desc" : "Allow some limited development of nearby lands, increasing wood and mineral production.",
     "policy.outerSpaceTreaty.label" : "Outer Space Treaty",
     "policy.outerSpaceTreaty.desc" : "Agree that space is the domain of all of Cath's races, improving relations with all trading partners.",
-    "policy.persistence.label": "Persistence",
-    "policy.persistence.desc": "Remain true to the beliefs of those who came before you, even if they are unpopular. Increase storage for unicorns and unicorn tears.",
-    "policy.persistence.desc.atheism": "Remain committed to the pursuit of deeper truth, even when everybody else thinks they have enough. Increase storage for unicorns and unicorn tears.",
     "policy.radicalXenophobia.label" : "Radical Xenophobia",
     "policy.radicalXenophobia.desc" : "Reject both evil aliens and evil robots. Mausoleum is twice as effective.",
     "policy.rationality.label" : "Rationality",
@@ -804,7 +803,7 @@
     "policy.republic.label" : "Republic",
     "policy.republic.desc" : "Best for large societies. Highly promoted leaders will provide a small bonus to the production of all kittens.",
     "policy.ritualCalendar.label": "Ritual Calendar",
-    "policy.ritualCalendar.desc": "Hold rituals on a scheduled basis synchronized with the movements of the sun. At the beginning of each season, unicorns above a certain threshold will be sacrificed.<br>Automatic sacrifices have a {0}% penalty to unicorn tears gained and can partially ignore storage caps.",
+    "policy.ritualCalendar.desc": "Hold rituals on a scheduled basis synchronized with the movements of the sun. On the first day of each season, unicorns above a certain threshold will be sacrificed.<br>Automatic sacrifices are less efficient than manual sacrifices, but they can partially ignore storage caps.",
     "policy.siphoning.label" : "Siphoning",
     "policy.siphoning.desc" : "Pacts consume alicorns and slow down corruption instead of consuming necrocorns. Lack of alicorns or corruption is compensated by consuming necrocorns.",
     "policy.socialism.label" : "Socialism",
