Buff Ritual Calendar

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -357,8 +357,10 @@
     "effectsMgr.statics.alicornChance.title": "Alicorns descent chance",
     "effectsMgr.statics.antimatterProduction.title": "Antimatter production",
     "effectsMgr.statics.arrivalSlowdown.title": "Arrival slowdown",
+    "effectsMgr.statics.autoSacrificeUnicornsPenalty.title": "Auto-sacrifice penalty",
     "effectsMgr.statics.autoSacrificeUnicornsThreshold.title": "Auto-sacrifice threshold",
     "effectsMgr.statics.autoSacrificeStableOvercapRatio.title": "Bypass storage limit",
+    "effectsMgr.statics.autoSacrificeStableOvercapEfficiency.title": "Bypass efficiency",
     "effectsMgr.statics.barnRatio.title": "Barn expansion",
     "effectsMgr.statics.baseMetalMaxRatio.title": "Maximum base metal bonus",
     "effectsMgr.statics.beaconRelicsPerDay.title": "Relic production",
