--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -426,6 +426,7 @@
     "effectsMgr.statics.expansionismUnobtainiumProductionBonus.title": "Unobtainium production bonus",
     "effectsMgr.statics.factoryCostReduction.title": "Factory cost reduction",
     "effectsMgr.statics.factoryRefineRatio.title": "Factory refine bonus",
+    "effectsMgr.statics.faithMaxRatio.title": "Maximum faith bonus",
     "effectsMgr.statics.faithRatioReligion.title": "Faith bonus",
     "effectsMgr.statics.festivalArrivalRatio.title" : "Festival growth rate",
     "effectsMgr.statics.festivalRatio.title" : "Festival effects",
@@ -1779,6 +1780,25 @@
     "village.artifact.artForm.music.title": "Music",
     "village.artifact.artForm.sculpture.title": "Sculpture",
     "village.artifact.artForm.tapestry.title": "Tapestry",
+    "village.artifact.creator": "Creator",
+
+    "village.artifact.description.book.technology": "Book holding all kitten knowledge about {0}.",
+    "village.artifact.description.book.policy": "Describes the history and values of {0} in kitten society.",
+    "village.artifact.description.book.program": "Contains recordings of the {0}.",
+    "village.artifact.description.painting.building": "Architectural painting depicting a {0}.",
+    "village.artifact.description.painting.zigguratUpgrade": "Surreal artwork of a {0}.",
+    "village.artifact.description.painting.planet": "Large painting featuring {0}.",
+    "village.artifact.description.music.job": "Folk song originating from and often sung by {0} kittens.",
+    "village.artifact.description.music.religionUpgrade": "Hymn celebrating {0}, often performed during religious services.",
+    "village.artifact.description.music.governmentPolicy": "Anthem about the values of {0}.",
+    "village.artifact.description.sculpture.race": "Sculpture depicting {0}.",
+    "village.artifact.description.sculpture.traitKitten": "Statue of {0}.",
+    "village.artifact.description.sculpture.jobKitten": "Statue of {0}.",
+    "village.artifact.description.sculpture.trait": "Depicts {0} kittens engaged in heated debate.",
+    "village.artifact.description.tapestry.raceTrade": "Tapestry depicting merchant kittens haggling with {0}.",
+    "village.artifact.description.tapestry.emissaries": "Shows emissaries from the {0} visiting the kitten {1}.",
+    "village.artifact.description.tapestry.religion": "Symbolic tapestry illustrating {0}",
+
     "village.bonus.desc.chemist": "Chemical crafting bonus",
     "village.bonus.desc.engineer": "Crafting bonus",
     "village.bonus.desc.manager": "Hunting bonus",
@@ -1806,6 +1826,7 @@
     "village.btn.upgradeHQ.desc": "Upgrades the max limit of your expedition supplies by 5 days + 1%",
     "village.btn.cherish": "Cherish",
     "village.btn.cherish.desc": "Cherish this artwork, making it more influencal",
+    "village.btn.cherishbutton.notEnoughXP": "You need more exp to cherish this artifact: ",
     "village.btn.unwrap": "Unwrap present box",
     "village.btn.unwrap.confirmation.msg": "Are you sure that you want to unwrap your present box right now? Maybe you can have a better gift by waiting a bit!",
    
