Balancing Unicorn Tears reward & Agathism

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -591,6 +591,7 @@
     "effectsMgr.statics.zebraAppeasedGoldPenalty.title" : "Gold penalty",
     "effectsMgr.statics.zebraPreparations.title": "Zebra Preparation",
     "effectsMgr.statics.zebraRelationModifier.title" : "Zebra relations modifier",
+    "effectsMgr.statics.zigguratIvoryPriceIncrease.title": "Ziggurat ivory price increase",
     "effectsMgr.statics.zigguratIvoryPriceRatio.title": "Ziggurat ivory price ratio",
     "effectsMgr.type.resConversion": "{0} conversion",
     "effectsMgr.type.resCraftRatio": "{0} craft effectiveness",
