--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -816,11 +816,11 @@
     "policy.nagaRelationsMasons.label" : "Naga Relations: Masons",
     "policy.nagaRelationsMasons.desc" : "Nagas almost exclusively use minerals as building materials, so they have a lot of experience extracting and processing it. They can show us the secrets of efficiently crafting slabs using quarries.",
     "policy.nagaRelationsCultists.label" : "Naga Relations: Cultists",
-    "policy.nagaRelationsCultists.desc" : "Nagas have very different religious traditions. We can study naga cultist rituals and employ them during our own religious services.<br>Monuments will now be slightly affected by Order of the Sun upgrades.",
+    "policy.nagaRelationsCultists.desc" : "Nagas have very different religious traditions. We can study naga cultist rituals and employ them during our own religious services.<br>Ziggurats will now be slightly affected by Order of the Sun upgrades.",
     "policy.necrocracy.label" : "Necrocracy",
     "policy.necrocracy.desc" : "Your society offers itself to the elders, they will take over and bring dark times, but you will get a production bonus from BLS.",
     "policy.lizardRelationsDiplomats.label" : "Lizard Relations: Diplomats",
-    "policy.lizardRelationsDiplomats.desc" : "Lizards are a peaceful race. If we want to befriend the races of Cath, they are more than willing to contribute.",
+    "policy.lizardRelationsDiplomats.desc" : "Lizards are a peaceful race. If we want to befriend the races of Cath, they are more than willing to contribute.<br>Building embassies will now grant a culture bonus.",
     "policy.lizardRelationsEcologists.label" : "Lizard Relations: Ecologists",
     "policy.lizardRelationsEcologists.desc" : "The lizards love nature and want to protect it. Their ecologists are experts on preventing pollution and at low pollution levels they can tune some of our green energy buildings, increasing their effectiveness.",
     "policy.lizardRelationsPriests.label" : "Lizard Relations: Priests",
