Easter egg: pumpkin spice in October

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1168,6 +1168,7 @@
     "resources.slab.title": "slab",
     "resources.sorrow.title": "sorrow",
     "resources.spice.title": "spice",
+    "resources.spice.title.october": "pumpkin spice",
     "resources.starchart.title": "starchart",
     "resources.steel.title": "steel",
     "resources.tMythril.title": "T-Mythril",
