Policy description change
Changed two policy descriptions to second person, so they are line with all other policies.

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -780,7 +780,7 @@
     "policy.environmentalism.label" : "Environmentalism",
     "policy.environmentalism.desc" : "Preserve the natural beauty of your village, slightly improving kittens' happiness.",
     "policy.epicurianism.label" : "Epicurianism",
-    "policy.epicurianism.desc" : "Our epicureans believe that pleasure is the highest good. Luxury resources will provide slightly more happiness.",
+    "policy.epicurianism.desc" : "Epicurean kittens believe that pleasure is the highest good. Luxury resources will provide slightly more happiness.",
     "policy.expansionism.label" : "Cosmological Libertarianism",
     "policy.expansionism.desc" : "Privatize the moon! Nothing changes on Cath, but unobtainium production will be increased.",
     "policy.extravagance.label": "Extravagance",
@@ -858,7 +858,7 @@
     "policy.spiderRelationsPaleontologists.label" : "Spider Relations: Paleontologists",
     "policy.spiderRelationsPaleontologists.desc" : "Paleontology is the study of ancient life through fossil records. The spider paleontologists can help us discover these fossils. They can also give us a better understanding of how and where oil was formed, improving our oil industry",
     "policy.stoicism.label" : "Stoicism",
-    "policy.stoicism.desc" : "The stoics teach that we ought to endure hardship without complaint. Halve consumption of luxury resources, and breweries will consume less resources.",
+    "policy.stoicism.desc" : "The stoics teach that kittens ought to endure hardship without complaint. Halve consumption of luxury resources, and breweries will consume less resources.",
     "policy.stripMining.label" : "Strip Mining",
     "policy.stripMining.desc" : "Decapitate the hills in an effort to improve your mineral production.",
     "policy.sustainability.label" : "Sustainability",
