--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -539,7 +539,7 @@
     "effectsMgr.statics.shatterVoidCost.title": "Base shatter void cost",
     "effectsMgr.statics.shatterYearBoost.title": "Custom shatter year",
     "effectsMgr.statics.shipLimit.title": "Ship limit effect",
-    "effectsMgr.statics.harborLimitRatioPolicy.title": "Ship potential bonus",
+    "effectsMgr.statics.harborLimitRatioPolicy.title": "Reactor Vessel bonus",
     "effectsMgr.statics.simScalingRatio.title": "Sim scaling ratio",
     "effectsMgr.statics.skillMultiplier.title": "Kitten's skill effect",
     "effectsMgr.statics.masterSkillMultiplier.title": "Master Kitten's skill effect",
@@ -764,9 +764,9 @@
     "policy.cryochamberExtraction.label": "Immortalism",
     "policy.cryochamberExtraction.desc" : "Extract cryochambers (?)",
     "policy.dragonRelationsPhysicists.label" : "Dragon Relations: Physicists",
-    "policy.dragonRelationsPhysicists.desc" : "Dragon physicists are experts on nuclear energy. They can help us improve our reactors.",
+    "policy.dragonRelationsPhysicists.desc" : "Dragon physicists are experts on nuclear energy. They can help by improving your reactors.",
     "policy.dragonRelationsAstrologers.label" : "Dragon Relations: Astrologers",
-    "policy.dragonRelationsAstrologers.desc" : "The dragons have a long standing tradition of studying celestial objects. We can work together with dragon astrologers to study the stars and get a look into their unique understanding of them.<br>Each year spent in a cycle increases starchart production",
+    "policy.dragonRelationsAstrologers.desc" : "The dragons have a long standing tradition of studying celestial objects. Work together with dragon astrologers to study the stars and get a look into their unique understanding of them.<br>Each year spent in a cycle increases starchart production",
     "policy.terraformingInsight.label": "Space expansionism",
     "policy.terraformingInsight.desc" : "Terraforming efficiency is increased",
     "policy.communism.label" : "Communism",
@@ -792,11 +792,11 @@
     "policy.fullIndustrialization.label" : "Full Industrialization",
     "policy.fullIndustrialization.desc" : "Take the advice of your new captains of industry, slightly improving the crafting bonus each factory provides.",
     "policy.griffinRelationsMetallurgists.label" : "Griffin Relations: Metallurgists",
-    "policy.griffinRelationsMetallurgists.desc" : "Griffins have a very good understanding of steelmaking and its intricate processes. Their metallurgists can help us improve our steel plants.",
+    "policy.griffinRelationsMetallurgists.desc" : "Griffins have a very good understanding of steelmaking and its intricate processes. Their metallurgists can help you by improving steel plants.",
     "policy.griffinRelationsScouts.label" : "Griffin Relations: Scouts",
-    "policy.griffinRelationsScouts.desc" : "Flight is very beneficial when looking for game. We can propose collaborating with griffin scouts during hunts to improve our effectiveness.",
+    "policy.griffinRelationsScouts.desc" : "Flight is very beneficial when looking for game. Propose collaborating with griffin scouts during hunts to improve its effectiveness.",
     "policy.griffinRelationsMachinists.label" : "Griffin Relations: Machinists",
-    "policy.griffinRelationsMachinists.desc" : "Griffins understand aerodynamics well and their machinists can improve our steamworks effectiveness.",
+    "policy.griffinRelationsMachinists.desc" : "Griffins understand aerodynamics well and their machinists can improve your steamworks effectiveness.",
     "policy.isolationism.label" : "Isolationism",
     "policy.isolationism.desc" : "Engage in protectionism of all types, making trades cheaper in terms of gold.",
     "policy.knowledgeSharing.label" : "Knowledge Sharing",
@@ -812,19 +812,19 @@
     "policy.mysticism.label" : "Mysticism",
     "policy.mysticism.desc" : "Accept the view that there are forces beyond the comprehension of kittens. Gain a small bonus to culture and faith production, though you might look silly for a while.",
     "policy.nagaRelationsArchitects.label" : "Naga Relations: Architects",
-    "policy.nagaRelationsArchitects.desc" : "Naga architects know some unique building techniques we do not possess, come to a trade agreement with them to obtain blueprints and study them.<br><br>Building Naga embassies will increase the chance to get blueprints from nagas by 0.25%, by up to 10%. Once the maximum bonus is achieved, they will improve the blueprint crafting ratio instead",
+    "policy.nagaRelationsArchitects.desc" : "Naga architects know some unique building techniques kittens do not possess, come to a trade agreement with them to obtain blueprints and study them.<br><br>Building Naga embassies will increase the chance to get blueprints from nagas by 0.25%, by up to 10%. Once the maximum bonus is achieved, they will improve the blueprint crafting ratio instead",
     "policy.nagaRelationsMasons.label" : "Naga Relations: Masons",
-    "policy.nagaRelationsMasons.desc" : "Nagas almost exclusively use minerals as building materials, so they have a lot of experience extracting and processing it. They can show us the secrets of efficiently crafting slabs using quarries.",
+    "policy.nagaRelationsMasons.desc" : "Nagas almost exclusively use minerals as building materials, so they have a lot of experience extracting and processing it. They can show you the secrets of efficiently crafting slabs using quarries.",
     "policy.nagaRelationsCultists.label" : "Naga Relations: Cultists",
-    "policy.nagaRelationsCultists.desc" : "Nagas have very different religious traditions. We can study naga cultist rituals and employ them during our own religious services.<br>Ziggurats will now be slightly affected by Order of the Sun upgrades.",
+    "policy.nagaRelationsCultists.desc" : "Nagas have very different religious traditions. Study naga cultist rituals and employ them during religious services.<br>Ziggurats will now be slightly affected by Order of the Sun upgrades.",
     "policy.necrocracy.label" : "Necrocracy",
     "policy.necrocracy.desc" : "Your society offers itself to the elders, they will take over and bring dark times, but you will get a production bonus from BLS.",
     "policy.lizardRelationsDiplomats.label" : "Lizard Relations: Diplomats",
-    "policy.lizardRelationsDiplomats.desc" : "Lizards are a peaceful race. If we want to befriend the races of Cath, they are more than willing to contribute.<br>Each embassy with any race will now grant a 0.04% culture bonus, up to 15%.",
+    "policy.lizardRelationsDiplomats.desc" : "Lizards are a peaceful race. If you want to befriend the races of Cath, they are more than willing to contribute.<br>Each embassy with any race will now grant a 0.04% culture bonus, up to 15%.",
     "policy.lizardRelationsEcologists.label" : "Lizard Relations: Ecologists",
-    "policy.lizardRelationsEcologists.desc" : "The lizards love nature and want to protect it. Their ecologists are experts on preventing pollution and at low pollution levels they can tune some of our green energy buildings, increasing their effectiveness.",
+    "policy.lizardRelationsEcologists.desc" : "The lizards love nature and want to protect it. Their ecologists are experts on preventing pollution and at low pollution levels they can tune some of your green energy buildings, increasing their effectiveness.",
     "policy.lizardRelationsPriests.label" : "Lizard Relations: Priests",
-    "policy.lizardRelationsPriests.desc" : "The lizards share our love of the sun. Their priests would be happy to help The Order of the Sun.",
+    "policy.lizardRelationsPriests.desc" : "The lizards share the kittens' love of the sun. Their priests would be happy to help The Order of the Sun.",
     "policy.openWoodlands.label" : "Open Woodlands",
     "policy.openWoodlands.desc" : "Allow some limited development of nearby lands, increasing wood and mineral production.",
     "policy.outerSpaceTreaty.label" : "Outer Space Treaty",
@@ -840,11 +840,11 @@
     "policy.scientificCommunism.label" : "Scientific Communism",
     "policy.scientificCommunism.desc" : "Increases all effects of Socialism by 25%",
     "policy.sharkRelationsBotanists.label" : "Shark Relations: Botanists",
-    "policy.sharkRelationsBotanists.desc" : "The sharks, like us, cultivate a lot of catnip so their botanists have a good understanding of it. We can collaborate with them to study and improve catnip refinement and conversion processes.",
+    "policy.sharkRelationsBotanists.desc" : "The sharks cultivate a lot of catnip, so their botanists have a good understanding of it. Collaborate with them to study and improve catnip refinement and conversion processes.",
     "policy.sharkRelationsScribes.label" : "Shark Relations: Scribes",
-    "policy.sharkRelationsScribes.desc" : "The shark scribes are keen on recording Cath's history and we can help each other in the form of a trade deal. If we give them more resources in trade, they are willing to share more of their recordings with us.",
+    "policy.sharkRelationsScribes.desc" : "The shark scribes are keen on recording Cath's history and you can help each other in the form of a trade deal. If you give them more resources in trade, they are willing to share more of their recordings.",
     "policy.sharkRelationsMerchants.label" : "Shark Relations: Merchants",
-    "policy.sharkRelationsMerchants.desc" : "The sharks are experts of traveling through water, but not so much on land. We can work together with their merchants to discover and share trade routes through water and land.<br>The more we trade, the more effective it becomes",
+    "policy.sharkRelationsMerchants.desc" : "The sharks are experts of traveling through water, but not so much on land. Work together with their merchants to discover and share trade routes through water and land.<br>The more you trade, the more effective it becomes",
     "policy.siphoning.label" : "Siphoning",
     "policy.siphoning.desc" : "Pacts consume alicorns and slow down corruption instead of consuming necrocorns. Lack of alicorns or corruption is compensated by consuming necrocorns.",
     "policy.socialism.label" : "Socialism",
@@ -852,11 +852,11 @@
     "policy.spaceBasedTerraforming.label" : "Space-based terraforming",
     "policy.spaceBasedTerraforming.desc" : "Put giant mirrors in the sky, boosting solar farms consistency. Unlocks Space Mirrors.",
     "policy.spiderRelationsGeologists.label" : "Spider Relations: Geologists",
-    "policy.spiderRelationsGeologists.desc" : "The spiders are willing to help us find and exploit good mineral deposits in exchange for our continued partnership.<br>Each embassy we have with spiders will improve our mining industry by 0.2%, up to a maximum of 15%",
+    "policy.spiderRelationsGeologists.desc" : "The spiders are willing to help you find and exploit good mineral deposits in exchange for your continued partnership.<br>Each embassy you have with spiders will improve your mining industry by 0.2%, up to a maximum of 15%",
     "policy.spiderRelationsChemists.label" : "Spider Relations: Chemists",
-    "policy.spiderRelationsChemists.desc" : "While spiders have abundant oil, they do not have the means to create kerosene yet. Our chemists can help them study chemical processes.<br><br> Spiders will now sell kerosene",
+    "policy.spiderRelationsChemists.desc" : "While spiders have abundant oil, they do not have the means to create kerosene yet. Your chemists can help them study chemical processes.<br><br> Spiders will now sell kerosene",
     "policy.spiderRelationsPaleontologists.label" : "Spider Relations: Paleontologists",
-    "policy.spiderRelationsPaleontologists.desc" : "Paleontology is the study of ancient life through fossil records. The spider paleontologists can help us discover these fossils. They can also give us a better understanding of how and where oil was formed, improving our oil industry",
+    "policy.spiderRelationsPaleontologists.desc" : "Paleontology is the study of ancient life through fossil records. The spider paleontologists can help you discover these fossils. They can also give you a better understanding of how and where oil was formed, improving the oil industry",
     "policy.stoicism.label" : "Stoicism",
     "policy.stoicism.desc" : "The stoics teach that kittens ought to endure hardship without complaint. Halve consumption of luxury resources, and breweries will consume less resources.",
     "policy.stripMining.label" : "Strip Mining",
