Pretty massive balancing changes

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -473,7 +473,6 @@
     "effectsMgr.statics.magnetoRatio.title": "Production bonus",
     "effectsMgr.statics.manpowerJobRatio.title": "Hunter tools",
     "effectsMgr.statics.manuscriptCost.title": "Manuscript {0} cost",
-    "effectsMgr.statics.markerCostIncrease.title": "Marker cost increase",
     "effectsMgr.statics.mausoleumBonus.title": "Mausoleum ratio",
     "effectsMgr.statics.maxKittens.title": "Kittens",
     "effectsMgr.statics.maxKittensRatio.title": "Max kittens ratio",
@@ -560,6 +559,7 @@
     "effectsMgr.statics.temporalPressCap.title": "Temporal press cap",
     "effectsMgr.statics.tcRefineRatio.title": "Alicorns sacrifice bonus",
     "effectsMgr.statics.technocracyScienceCap.title": "Science cap bonus",
+    "effectsMgr.statics.techUnicornsRatio.title": "Science tears prices",
     "effectsMgr.statics.tectonicBonus.title": "Tectonic bonus",
     "effectsMgr.statics.temporalFluxProduction.title": "Temporal Flux production",
     "effectsMgr.statics.temporalFluxProductionChronosphere.title": "Chronosphere's temporal flux production",
