--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -323,7 +323,7 @@
     "challendge.postApocalypse.flavor": "'Surely it's not that bad' they thought",
     "challendge.reservesReclaimed.msg": "Reserves were reclaimed!",
     "challendge.unicornTears.label": "Unicorn Tears",
-    "challendge.unicornTears.desc": "Restart the game with many buildings changed to require unicorn tears. Storage space for unicorns-related resources is limited.<br><br>Goal: Obtain one necrocorn.",
+    "challendge.unicornTears.desc": "Restart the game with many prices changed to require unicorn tears. Storage space for unicorn-related resources is limited.<br><br>Goal: Obtain one necrocorn.",
     "challendge.unicornTears.effect.desc": "Unicorn Tombs increase max faith based on your transcendence tier.",
     "challendge.winterIsComing.label": "Winter Has Come",
     "challendge.winterIsComing.desc": "Restart the game with only winter seasons. (Catnip will not benefit from paragon production bonus)<br><br>Goal: Get to Helios.",
@@ -737,7 +737,7 @@
 
     "policy.panel.label": "Policies",
     "policy.agathism.label": "Agathism",
-    "policy.agathism.desc": "Accept the belief that the universe is headed towards a better future, even if there are some setbacks along the way.<br>Storage space for unicorn-related resources will be increased.",
+    "policy.agathism.desc": "Accept the belief that the universe is headed towards a better future, even if there are some setbacks along the way.<br>Storage space for unicorn-related resources will be increased. Certain technologies will increase this bonus.",
     "policy.autocracy.label" : "Autocracy",
     "policy.autocracy.desc" : "Best for societies with highly promoted kittens. Makes the leader twice as good at their job. Leader increases conversion production based on uncapped housing buildings.",
     "policy.bigStickPolicy.label" : "Big Stick Policy",
