--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -106,6 +106,7 @@
     "btn.sell": "Sell",
     "btn.sell.minor": "sell",
     "btn.trade": "Trade",
+    "btn.useless.tooltip": "Part or all of its effect is unavailable right now",
     "btn.blocked.capital": "(Blocked)",
 
     "sell.all.confirmation.title": "",
