Added loadout system

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1808,6 +1808,7 @@
     "left.craft": "craft",
     "left.trade": "pins",
     "left.trade.do": "Trade with {0}",
+    "left.loadout.do": "Set loadout {0}",
     "left.hunt": "Send hunters",
     "left.hunt.time": "time",
     "left.hunt.times": "times",
@@ -1859,6 +1860,11 @@
     "village.btn.upgradeHQ.desc": "Upgrades the max limit of your expedition supplies by 5 days + 1%",
     "village.btn.unwrap": "Unwrap present box",
     "village.btn.unwrap.confirmation.msg": "Are you sure that you want to unwrap your present box right now? Maybe you can have a better gift by waiting a bit!",
+    "village.btn.loadout.save": "Save",
+    "village.btn.loadout.rename": "Name",
+    "village.btn.loadout.delete": "X",
+    "village.btn.loadout.delete.confirm": "Are you sure you want to delete the {0} loadout?",
+    "village.btn.loadout.empty": "Empty",
    
     "village.census.age": "years old",
     "village.census.filter.all": "All jobs",
@@ -1910,6 +1916,23 @@
     "village.kittens.promotion.nogold": "Not enough gold to promote kittens",
     "village.leader.promoted.one.kitten": "Your leader has promoted one kitten",
     "village.leader.promoted.many.kittens": "Your leader has promoted {0} kittens",
+    "village.loadout.desc": "Leader: {0}<br><br>",
+    "village.loadout.desc2": "Jobs{0}",
+    "village.loadout.desc3": "<br><br>Engineer Crafts{0}",
+    "village.loadout.title": "Loadouts",
+    "village.loadout.create": "Create Loadout",
+    "village.loadout.delete.all": "Delete all loadouts",
+    "village.loadout.delete.all.confirm": "Are you sure you want to delete ALL loadouts?",
+    "village.loadout.show.default": "Show Defaults",
+    "village.loadout.remove.default": "Remove Defaults",
+    "village.loadout.default.balanced.title": "Balanced",
+    "village.loadout.default.farming.title": "Farming",
+    "village.loadout.default.gathering.title": "Gathering",
+    "village.loadout.default.hunting.title": "Hunting",
+    "village.loadout.default.research.title": "Research",
+    "village.loadout.default.religion.title": "Religion",
+    "village.loadout.default.trade.title": "Trade",
+    "village.loadout.default.metallurgy.title": "Metallurgy",
     "village.msg.froze": "froze to death.",
     "village.msg.hunt.from": " from {0} hunts",
     "village.msg.hunt.furs": "+{0} furs",
