Sorting and favorite system
- Kittens can be sorted
- There are pages in the census
- Kittens can be favorited, and favorite kittens are prioritized when you reset with cryochambers
- If a kitten is an engineer census now also lists what they are crafting.

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1865,8 +1865,12 @@
     "village.btn.loadout.delete": "X",
     "village.btn.loadout.delete.confirm": "Are you sure you want to delete the {0} loadout?",
     "village.btn.loadout.empty": "Empty",
-   
+    "village.btn.next": "Next Page",
+    "village.btn.previous": "Previous Page",
+
     "village.census.age": "years old",
+    "village.census.crafting": "Crafting: ",
+    "village.census.crafting.nothing": "Nothing",
     "village.census.filter.all": "All jobs",
     "village.census.lbl.festival.duration": "Festival duration",
     "village.census.lbl.happiness": "Happiness",
@@ -1874,6 +1878,10 @@
     "village.census.leader.propmote": "Promote ({0} exp, {1} gold)",
     "village.census.page": "Page {0} of {1}",
     "village.census.rank": "rank",
+    "village.census.sort.exp": "Sort by Exp",
+    "village.census.sort.favorite": "Favorites",
+    "village.census.sort.color": "Color",
+    "village.census.sort.variety": "Variety",
     "village.census.trait.none": "No trait :< ",
     "village.festival.msg.start": "The cultural festival has started",
     "village.festival.msg.ext": "The cultural festival has been extended",
