Loadout sorting and description
- When loadouts are assigning a leader, the most experienced kittens will be prioritized.
- Loadout description now shows leader job saved.
- Comment cleanup

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1929,9 +1929,10 @@
     "village.kittens.promotion.nogold": "Not enough gold to promote kittens",
     "village.leader.promoted.one.kitten": "Your leader has promoted one kitten",
     "village.leader.promoted.many.kittens": "Your leader has promoted {0} kittens",
-    "village.loadout.desc": "Leader: {0}<br><br>",
-    "village.loadout.desc2": "Jobs{0}",
-    "village.loadout.desc3": "<br><br>Engineer Crafts{0}",
+    "village.loadout.desc": "Leader: {0}",
+    "village.loadout.desc2": "Leader job: {0}",
+    "village.loadout.desc3": "Jobs{0}",
+    "village.loadout.desc4": "<br><br>Engineer Crafts{0}",
     "village.loadout.title": "Loadouts",
     "village.loadout.create": "Create Loadout",
     "village.loadout.delete.all": "Delete all loadouts",
