Add new reward: hunts find more unicorns

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -607,6 +607,7 @@
     "effectsMgr.statics.tradeKnowledgeRatio.title": "Current trade ratio",
     "effectsMgr.statics.umbraBoostRatio.title": "HR Harvester bonus",
     "effectsMgr.statics.unhappinessRatio.title": "Unhappiness reduction",
+    "effectsMgr.statics.unicornHuntChance.title": "Unicorns from hunting",
     "effectsMgr.statics.unicornSacrificeRatio.title": "Unicorn sacrifice bonus tears",
     "effectsMgr.statics.unicornsGlobalRatio.title": "Unicorns bonus",
     "effectsMgr.statics.unicornsRatioReligion.title": "Unicorns bonus",
