--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -321,6 +321,9 @@
     "challendge.postApocalypse.effect.desc": "Increases amount of cryochaimbers that can be operational. Unlocks special policies for this run.",
     "challendge.postApocalypse.flavor": "'Surely it's not that bad' they thought",
     "challendge.reservesReclaimed.msg": "Reserves were reclaimed!",
+    "challendge.unicornTears.label": "Unicorn Tears",
+    "challendge.unicornTears.desc": "WIP",
+    "challendge.unicornTears.effect.desc": "WIP",
     "challendge.winterIsComing.label": "Winter Has Come",
     "challendge.winterIsComing.desc": "Restart the game with only winter seasons. (Catnip will not benefit from paragon production bonus)<br><br>Goal: Get to Helios.",
     "challendge.winterIsComing.effect.desc": "No more cold winters.",
