--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -256,13 +256,16 @@
     "buildings.downgrade.confirmation.msg": "Do you want to downgrade this building?\n\nYou will lose all of those currently built.",
 
     "calendar.msg.alicorn": "An Alicorn has descended from the sky!",
+    "calendar.msg.alicorn.departed": "{0} alicorns ascended back into the heavens.",
     "calendar.msg.event": "A rare astronomical event occurred in the sky",
     "calendar.msg.ivoryMeteor": "Ivory Meteor fell near the village, +{0} ivory!",
     "calendar.msg.meteor": "A meteor fell near the village",
     "calendar.msg.rift": "A rift to the Unicorn Dimension has opened in your village, +{0} unicorns!",
     "calendar.msg.starchart": "You've made {0} starcharts!",
     "calendar.msg.science": "+{0} science!",
+    "calendar.msg.tear.spilled": "{0} tears spilled, vanishing into black smoke.",
     "calendar.msg.unicorn": "A unicorn comes to your village attracted by the catnip scent!",
+    "calendar.msg.unicorn.departed": "{0} unicorns wandered off into the lands north of the village.",
     "calendar.msg.zebra.hunter": "A mysterious hunter from zebra tribe decides to stop over in the village.",
     "calendar.msg.zebra.hunter.departed": "Zebra hunter has departed from your village.",
     "calendar.msg.zebra.hunter.departed.pl": "Zebra hunters have departed from your village.",
