Limit unicorn-related resources in a Unicorn Tears Challenge (#63)
* Limit storage capacity for unicorn-related resources

* Improvements to the religious resource refining system

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -256,13 +256,16 @@
     "buildings.downgrade.confirmation.msg": "Do you want to downgrade this building?\n\nYou will lose all of those currently built.",
 
     "calendar.msg.alicorn": "An Alicorn has descended from the sky!",
+    "calendar.msg.alicorn.departed": "{0} alicorns ascended back into the heavens.",
     "calendar.msg.event": "A rare astronomical event occurred in the sky",
     "calendar.msg.ivoryMeteor": "Ivory Meteor fell near the village, +{0} ivory!",
     "calendar.msg.meteor": "A meteor fell near the village",
     "calendar.msg.rift": "A rift to the Unicorn Dimension has opened in your village, +{0} unicorns!",
     "calendar.msg.starchart": "You've made {0} starcharts!",
     "calendar.msg.science": "+{0} science!",
+    "calendar.msg.tear.spilled": "{0} tears spilled, vanishing into black smoke.",
     "calendar.msg.unicorn": "A unicorn comes to your village attracted by the catnip scent!",
+    "calendar.msg.unicorn.departed": "{0} unicorns wandered off into the lands north of the village.",
     "calendar.msg.zebra.hunter": "A mysterious hunter from zebra tribe decides to stop over in the village.",
     "calendar.msg.zebra.hunter.departed": "Zebra hunter has departed from your village.",
     "calendar.msg.zebra.hunter.departed.pl": "Zebra hunters have departed from your village.",
@@ -1045,6 +1048,7 @@
     "religion.sacrificeBtn.label": "Sacrifice Unicorns",
     "religion.sacrificeBtn.desc": "Return the unicorns to the Unicorn Dimension. You will receive one Unicorn Tear for every ziggurat you have.",
     "religion.sacrificeBtn.sacrifice.msg": "{0} unicorns have been sacrificed. You've got {1} unicorn tears!",
+    "religion.sacrificeBtn.sacrifice.msg.overcap": "{0} tears spilled, vanishing into black smoke.",
     "religion.transcend.confirmation.title": "Transcend?",
     "religion.transcend.confirmation.msg": "Are you sure you want to discard part of your epiphany?\n\nYou can reach special transcendence tiers by sacrificing part of your epiphany.\n\nEach tier will boost the effectiveness of worship conversion (Adore the stars).\n\nEvery level requires proportionally more epiphany to be sacrificed.\n\nThis bonus will stack and carry over through resets.\n\nCLICKING THIS BUTTON WILL ERASE PART OF YOUR EPIPHANY AND PRAISING EFFICIENCY.",
     "religion.transcend.msg.failure": "One step closer: {0}%",
